[package]
name = "suzumi"
version = "1.0.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
publish = false

[dependencies]
rusttype = "0.9"

[dependencies.image]
version = "0.23"
default-features = false
features = ["png"]

[dependencies.imageproc]
version = "0.22"
default-features = false

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
